# mqt-ddsim

./: .cirrus.yml  .clang-format  .clang-tidy  .clang-tidy-ignore  .cmake-format.yaml  .editorconfig  .gitignore  .gitmodules  .lgtm.yml  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  MANIFEST.in  README.md  UPGRADING.md  ddsim.ipynb  noxfile.py  pyproject.toml  requirements-test.txt  setup.py
apps/: CMakeLists.txt  benchmark.cpp  frqi.cpp  noise_aware.cpp  primebases.cpp  simple.cpp  vectors.cpp
bindings/: CMakeLists.txt  bindings.cpp
mqt/ddsim/: CMakeLists.txt  __init__.py  bindings.cpp  error.py  header.py  hybridqasmsimulator.py  hybridstatevectorsimulator.py  job.py  noiseawarestochasticsimulator.py  pathqasmsimulator.py  pathstatevectorsimulator.py  provider.py  qasmsimulator.py  qasmsimulator_mod.py  statevectorsimulator.py  target.py  unitarysimulator.py
src/: CMakeLists.txt  CircuitPartitioner.cpp  CircuitSimulator.cpp  DDMinimizer.cpp  DeterministicNoiseSimulator.cpp  GroverSimulator.cpp  HybridSchrodingerFeynmanSimulator.cpp  HybridSchroedingerFeynmanSimulator.cpp  MBQCSimulator.cpp  ParallelizationSimulator.cpp  PathSimulator.cpp  QFRSimulator.cpp  ShorFastSimulator.cpp  ShorSimulator.cpp  SimpleSimulator.cpp  Simulator.cpp  SlicingSimulator.cpp  StochasticNoiseSimulator.cpp  TaskBasedSimulator.cpp  UnitarySimulator.cpp
src/mqt/ddsim/: __init__.py  deterministicnoisesimulator.py  header.py  hybridqasmsimulator.py  hybridstatevectorsimulator.py  job.py  pathqasmsimulator.py  pathstatevectorsimulator.py  provider.py  pyddsim.pyi  qasmsimulator.py  sampler.py  simulation.py  statevectorsimulator.py  stochasticNoiseSimulator.py  stochasticnoisesimulator.py  target.py  unitarysimulator.py
src/python/: CMakeLists.txt  bindings.cpp
src/qir/: CMakeLists.txt  DDsimQir.cpp
test/: CMakeLists.txt  __init__.py  benchmark.cpp  convertPng.sh  test_circuit_sim.cpp  test_det_noise_sim.cpp  test_fast_shor_sim.cpp  test_grover_sim.cpp  test_hybridsim.cpp  test_output_ddvis.cpp  test_parallel_sim.cpp  test_path_sim.cpp  test_qfr_sim.cpp  test_reorder_without_reordering.cpp  test_shor_sim.cpp  test_simple.cpp  test_stoch_noise_sim.cpp  test_taskbased_sim.cpp  test_unitary_sim.cpp
test/BenchmarkQuasm/: errors.txt  gates.txt
test/BenchmarkQuasm/dot/: ghz_max_2.dot  ghz_max_3.dot  ghz_max_4.dot  ghz_max_5.dot  ghz_max_6.dot  ghz_max_7.dot  ghz_max_8.dot  ghz_min_2.dot  ghz_min_3.dot  ghz_min_4.dot  ghz_min_5.dot  ghz_min_6.dot  ghz_min_7.dot  ghz_min_8.dot  graphstate_max_3.dot  graphstate_max_5.dot  graphstate_max_6.dot  graphstate_min_5.dot  graphstate_min_6.dot  grover_max_5.dot  grover_min_5.dot  qaoa_max_3.dot  qaoa_max_4.dot  qaoa_max_5.dot  qaoa_max_6.dot  qaoa_max_7.dot  qaoa_min_3.dot  qaoa_min_4.dot  qaoa_min_5.dot  qaoa_min_6.dot  qaoa_min_7.dot  vqe_max_3.dot  vqe_max_4.dot  vqe_max_5.dot  vqe_max_6.dot  vqe_max_7.dot  vqe_min_3.dot  vqe_min_4.dot  vqe_min_5.dot  vqe_min_6.dot  (+1 more)
test/BenchmarkQuasm/dot_control/: graphstate_permuted_3.dot  graphstate_permuted_4.dot  graphstateorigin_3.dot  graphstateorigin_4.dot
test/BenchmarkQuasm/qasm/: aa_0.qasm  aa_1.qasm  aa_2.qasm  aa_3.qasm  aa_4.qasm  aa_5.qasm  aa_6.qasm  aa_7.qasm  aa_8.qasm  aa_9.qasm  ae_indep_qiskit_2.qasm  ae_indep_qiskit_3.qasm  ae_indep_qiskit_4.qasm  ae_indep_qiskit_5.qasm  ae_indep_qiskit_6.qasm  ae_indep_qiskit_7.qasm  dj_indep_qiskit_2.qasm  dj_indep_qiskit_3.qasm  dj_indep_qiskit_4.qasm  dj_indep_qiskit_5.qasm  dj_indep_qiskit_6.qasm  dj_indep_qiskit_7.qasm  ghz_indep_qiskit_10.qasm  ghz_indep_qiskit_2.qasm  ghz_indep_qiskit_3.qasm  ghz_indep_qiskit_4.qasm  ghz_indep_qiskit_5.qasm  ghz_indep_qiskit_6.qasm  ghz_indep_qiskit_7.qasm  ghz_indep_qiskit_8.qasm  ghz_indep_qiskit_9.qasm  graphstate_indep_qiskit_3.qasm  graphstate_indep_qiskit_4.qasm  graphstate_indep_qiskit_5.qasm  graphstate_indep_qiskit_6.qasm  graphstate_indep_qiskit_7.qasm  grover-noancilla_indep_qiskit_2.qasm  grover-noancilla_indep_qiskit_4.qasm  grover-noancilla_indep_qiskit_5.qasm  grover-noancilla_indep_qiskit_6.qasm  (+102 more)
test/BenchmarkQuasm/results/: aa_all.txt  ae_indep_qiskit_all.txt  ae_indep_qiskit_controls.txt  ae_indep_qiskit_gates.txt  dj_indep_qiskit_all.txt  dj_indep_qiskit_controls.txt  dj_indep_qiskit_gates.txt  ghz_indep_qiskit_all.txt  ghz_indep_qiskit_controls.txt  ghz_indep_qiskit_gates.txt  graphstate_indep_qiskit_all.txt  graphstate_indep_qiskit_controls.txt  graphstate_indep_qiskit_gates.txt  grover-noancilla_indep_qiskit_all.txt  grover-noancilla_indep_qiskit_controls.txt  grover-noancilla_indep_qiskit_gates.txt  grover-v-chain_indep_qiskit_all.txt  grover-v-chain_indep_qiskit_controls.txt  grover-v-chain_indep_qiskit_gates.txt  grover_all.txt  grover_controls.txt  grover_gates.txt  portfolioqaoa_indep_qiskit_all.txt  portfolioqaoa_indep_qiskit_controls.txt  portfolioqaoa_indep_qiskit_gates.txt  portfoliovqe_indep_qiskit_all.txt  portfoliovqe_indep_qiskit_controls.txt  portfoliovqe_indep_qiskit_gates.txt  qaoa_indep_qiskit_all.txt  qaoa_indep_qiskit_controls.txt  qaoa_indep_qiskit_gates.txt  qft_indep_qiskit_all.txt  qft_indep_qiskit_controls.txt  qft_indep_qiskit_gates.txt  qftentangled_indep_qiskit_all.txt  qftentangled_indep_qiskit_controls.txt  qftentangled_indep_qiskit_gates.txt  qnn_indep_qiskit_all.txt  qnn_indep_qiskit_controls.txt  qnn_indep_qiskit_gates.txt  (+30 more)
test/circuits/: inst_4x4_10_0.txt  inst_4x4_10_1.txt  inst_4x4_10_2.txt  test_original.real
test/python/: backend_test.py  constraints.txt  dimacs_file.txt  generate_benchmarks.py  grover.py  test_backend.py  test_multi_registers_convention.py  test_provider.py  test_qasm_simulator.py  test_sampler.py  test_snapshot.py  test_standalone.py  test_target.py
test/python/hybrid/: hybrid_backend_example.py  test_hybrid_backend.py  test_hybrid_snapshot.py  test_qasm_simulator.py  test_snapshot.py  test_standalone.py
test/python/hybridsimulator/: test_hybrid_qasm_simulator.py  test_hybrid_standalone_simulator.py  (+1 more)
test/qir/: CMakeLists.txt  test_qir.cpp
(+191 files in other folders)
